# Dantsz.github.io

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  Trunk.toml  build.rs  index.html  index.md  package.json  tailwind.config.js
.github/workflows/: deploy.yml  static.yml
resources/: QtCreatorVSGreyplus.xml  Yorcvs.data  Yorcvs.html  Yorcvs.js  index.html
resources/apps/yorvs_client/: yorvs-871e8f5c219d5786.js  yorvs.wasm  yorvs_loader.js
resources/articles/: articles.csv
resources/generated_assets/: chairs.html  skateplane.html
resources/posts/: 356.md  Find Lucky Integer in an Array.md  Number of Subsequences That Satisfy the Given Sum Condition.md  posts.csv
src/: app.rs  article.rs  main.rs  router.rs  theme.rs
src/assets/: firstarticle.json
src/components/: article.rs  article_list.rs  cat_fact.rs  home_page.rs  mod.rs  post.rs  post_list.rs
src/pages/: article_page.rs  assetgen.rs  home_page.rs  mod.rs  post_page.rs
