[package]
name = "dantsz_blog"
version = "0.1.0"
edition = "2021"
description = "Attempt at technical blogging"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
yew-router = "0.17"
serde = "*"
serde_json = "*"
gloo-net = "0.2.6"
wasm-bindgen-futures = "0.4.34"
yew-interop = { version = "0.3.0", features = ["script"] }
comrak = "0.16.0"
gloo-console = "0.2.3"
