[package]
name = "dantsz_homepage"
version = "0.2.0"
edition = "2021"
description = "Just a simple Yew app to host my homepage"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
serde = "1.0.217"
serde_json = "*"
gloo-net = "0.6.0"
wasm-bindgen-futures = "0.4.34"
yew-interop = { version = "0.3.0", features = ["script"] }
comrak = "0.39.1"
gloo-console = "0.3.0"
